cgt-macros/tests/trybuild/failures/cgt_test_derive.rs
#[derive(cgt_macros::cgt_test)]
struct Dummy;